<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_1"
            android:checked="true"
            android:title="@string/item_1" />

        <item
            android:id="@+id/item_2"
            android:checkable="false"
            android:title="@string/item_2" />

        <item
            android:id="@+id/item_3"
            android:checkable="false"
            android:title="@string/item_3" />
        <item
            android:id="@+id/item_4"
            android:checked="true"
            android:title="@string/item_4" />

        <item
            android:id="@+id/item_5"
            android:checkable="false"
            android:title="@string/item_5" />

        <item
            android:id="@+id/item_6"
            android:checkable="false"
            android:title="@string/item_6" />
        <item
            android:id="@+id/item_7"
            android:checked="true"
            android:title="@string/item_7" />

        <item
            android:id="@+id/item_8"
            android:checkable="false"
            android:title="@string/item_8" />

        <item
            android:id="@+id/item_9"
            android:checkable="false"
            android:title="@string/item_9" />

    </group>




    <!--<group android:checkableBehavior="single">-->


        <!--<item-->
            <!--android:id="@+id/item_theme"-->
            <!--android:checkable="false"-->
            <!--android:icon="@drawable/ic_color_lens_black_24dp"-->
            <!--android:title="@string/item_theme" />-->

        <!--<item-->
            <!--android:id="@+id/item_app"-->
            <!--android:checkable="false"-->
            <!--android:icon="@drawable/ic_shop_black_24dp"-->
            <!--android:title="@string/item_app" />-->


        <!--<item-->
            <!--android:id="@+id/item_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
            <!--android:title="@string/item_settings" />-->

    <!--</group>-->

</menu>